archimo-sample-ecommerce/k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ecommerce-sample
  labels:
    app.kubernetes.io/name: archimo-sample-ecommerce
