archimo-sample-ecommerce/k8s/10-mariadb.yaml
apiVersion: v1
kind: Service
metadata:
  name: mariadb
  namespace: ecommerce-sample
  labels:
    app: mariadb
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: mariadb
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mariadb
  namespace: ecommerce-sample
  labels:
    app: mariadb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          image: mariadb:11.4
          ports:
            - containerPort: 3306
