archimo-sample-ecommerce/k8s/12-zookeeper.yaml
apiVersion: v1
kind: Service
metadata:
  name: zookeeper
  namespace: ecommerce-sample
  labels:
    app: zookeeper
spec:
  ports:
    - port: 2181
      name: client
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zookeeper
  namespace: ecommerce-sample
  labels:
    app: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - name: zookeeper
          image: docker.io/bitnami/zookeeper:3.9.2
          ports:
            - containerPort: 2181
