archimo-sample-ecommerce/k8s/13-kafka.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: ecommerce-sample
  labels:
    app: kafka
spec:
  ports:
    - port: 9092
      name: plaintext
      targetPort: 9092
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka
  namespace: ecommerce-sample
  labels:
    app: kafka
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: docker.io/bitnami/kafka:3.7.0
          ports:
            - containerPort: 9092
