archimo-sample-ecommerce/k8s/21-api-gateway.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: ecommerce-sample
  labels:
    app: api-gateway
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: api-gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: ecommerce-sample
  labels:
    app: api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: gateway
          image: springcloud/spring-cloud-gateway:latest
          ports:
            - containerPort: 8080
