archimo-sample-ecommerce/k8s/30-nginx-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-front
  namespace: ecommerce-sample
  labels:
    app: nginx-front
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nginx-front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-front
  namespace: ecommerce-sample
  labels:
    app: nginx-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-front
  template:
    metadata:
      labels:
        app: nginx-front
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cfg
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
            - name: cfg
              mountPath: /usr/share/nginx/html/index.html
              subPath: index.html
      volumes:
        - name: cfg
          configMap:
            name: nginx-front
