archimo-sample-ecommerce/k8s/40-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-shop
  namespace: ecommerce-sample
  labels:
    app: nginx-front
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: shop.archimo-sample.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-front
                port:
                  number: 80
